--- a/autoscheduler/frontend/src/components/Schedule/Schedule.css
+++ b/autoscheduler/frontend/src/components/Schedule/Schedule.css
@@ -36,14 +36,16 @@
 .hour-label {
     flex-grow: 0;
     width: calc(v-time-label-margin - 4px);
-    align-self: flex-start;
+    align-self: stretch;
     text-align: right;
     padding-right: 4px;
+    background-color: #c2c2c2;
+
 }
 
 .hour-marker {
     flex-grow: 1;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid darkgray;
     height: 0;
     align-self: stretch;
     position: relative;
@@ -73,6 +75,8 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    z-index: -1;
+    background-color: white;
 }
 
 .calendar-day {
