--- a/autoscheduler/frontend/src/components/Schedule/Schedule.css
+++ b/autoscheduler/frontend/src/components/Schedule/Schedule.css
@@ -36,16 +36,14 @@
 .hour-label {
     flex-grow: 0;
     width: calc(v-time-label-margin - 4px);
-    align-self: stretch;
+    align-self: flex-start;
     text-align: right;
     padding-right: 4px;
-    background-color: #c2c2c2;
-
 }
 
 .hour-marker {
     flex-grow: 1;
-    border-bottom: 1px solid darkgray;
+    border-bottom: 1px solid lightgray;
     height: 0;
     align-self: stretch;
     position: relative;
@@ -75,8 +73,6 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    z-index: -1;
-    background-color: white;
 }
 
 .calendar-day {
